<resources>
    <string name="app_name">The Cheating Room</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="logout">Logout</string>
    <string name="account_setting">Account Setting</string>
    <string name="all_users">All Users</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">Login</string>
    <string name="welcome_to_the_cheating_room">Welcome to The Cheating Room</string>
    <string name="already_have_account">Already have account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_the_cheating_room_app">Hi there, I\'m using The Cheating Room App</string>
    <string name="change_image">change image</string>
    <string name="change_status">change status</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="total_friends">Total Friends</string>
    <string name="decline_friend_request">decline friend request</string>
</resources>
