<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/register_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint"
        app:layout_constraintTop_toBottomOf="@id/register_toolbar"
        android:layout_marginTop="60dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/create_a_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/main_constraint"
            android:layout_marginTop="50dp"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/create_a_new_account"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name_text"
            app:layout_constraintTop_toBottomOf="@id/create_a_new_account"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/display_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:id="@+id/input_email_text"
            app:layout_constraintTop_toBottomOf="@id/input_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:id="@+id/input_password_text"
            app:layout_constraintTop_toBottomOf="@id/input_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reg_create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>